<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ViewTransactionFragment">


    <!-- Food -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comida"
        android:id="@+id/tvComida"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".25"
        app:layout_constraintVertical_bias=".1667"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_300"
        android:id="@+id/tvPrecioComida"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/tvComida"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".75"
        app:layout_constraintVertical_bias=".1667"
        />
    <!-- End Food -->

    <!-- Data -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datos"
        android:id="@+id/tvDatos"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".25"
        app:layout_constraintVertical_bias=".3333"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_200"
        android:id="@+id/tvPrecioDatos"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/tvDatos"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".75"
        app:layout_constraintVertical_bias=".3333"
        />
    <!-- End Data -->

    <!-- Rent -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/renta"
        android:id="@+id/tvRenta"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".25"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_200"
        android:id="@+id/tvPrecioRenta"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/tvRenta"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".75"
        />
    <!-- End Rent -->


    <!-- Candles -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/velas"
        android:id="@+id/tvVelas"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".25"
        app:layout_constraintVertical_bias=".6667"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3600"
        android:id="@+id/tvPrecioVelas"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/tvVelas"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".75"
        app:layout_constraintVertical_bias=".6667"
        />
    <!-- End Candles -->

    <!-- Utility -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/utilidad"
        android:id="@+id/tvUtilidad"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".25"
        app:layout_constraintVertical_bias=".8334"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_150"
        android:id="@+id/tvPrecioUtilidad"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/tvUtilidad"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".75"
        app:layout_constraintVertical_bias=".8334"
        />
    <!-- End Utility -->

</androidx.constraintlayout.widget.ConstraintLayout>