<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment"
    android:id="@+id/parentLayout">

    <Button
        android:text="@string/ver_transacciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnVerTransacciones"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnEnviarDinero"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:text="@string/enviar_dinero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEnviarDinero"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:text="@string/ver_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnVerBalance"
        app:layout_constraintTop_toBottomOf="@+id/btnEnviarDinero"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>